<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="448dp"
        android:rotation="132"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hoja" />

    <TextView
        android:id="@+id/txtvNombreLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/nombre"
        android:textColor="#9C9A9A"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTxtNombreLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvNombreLogin" />

    <TextView
        android:id="@+id/txtvContraLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/contra"
        android:textColor="#9C9A9A"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNombreLogin" />

    <EditText
        android:id="@+id/editTxtContraLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvContraLogin" />

    <TextView
        android:id="@+id/txtvRestContra"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/rest_contra"
        android:textColor="#0055FF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtContraLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:backgroundTint="#FF0000"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/iniciar_sesion"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvRestContra" />

    <TextView
        android:id="@+id/txtvNoCuentaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/no_cuenta"
        android:textColor="#9C9A9A"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/txtvInscribirseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="105dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/inscribirse"
        android:textColor="#0055FF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#CA432A"
        android:drawableLeft="@mipmap/google"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvNoCuentaLogin" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#3C4B9E"
        android:drawableLeft="@mipmap/facebook"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>