<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="450dp"></androidx.viewpager2.widget.ViewPager2>

    <Button
        android:id="@+id/btnEmpezar"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#0A2CDC"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/empezar"
        android:textAllCaps="false"
        android:textSize="16sp"></Button>

    <TextView
        android:id="@+id/txtvDescubre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-condensed-medium"
        android:layoutDirection="ltr"
        android:text="@string/descubre"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/txtvImp"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/implementacion"
        android:textAlignment="center"
        android:textColor="#9C9A9A"
        android:textSize="16sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ImageView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>